# FullCrypt

./: .gitignore  README.md  docker-compose.yml  middleware.ts  package-lock.json  package.json  tsconfig.json
app/: layout.tsx  middleware.ts  page.tsx
app/cloud/: page.tsx
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: queries.rs
backend/src/db/queries/: aceitar_compartilhamento.sql  create_tables.sql  delete_arquivo.sql  get_arquivo_by_id.sql  get_dilithium_pk.sql  get_kyber_pk.sql  get_user_by_email.sql  get_user_pk.sql  insert_arquivo.sql  insert_compartilhamento.sql  mod.rs  recusar_compartilhamento.sql  register_user.sql  select_arquivos.sql  select_arquivos_compartilhados.sql  select_compartilhamentos.sql  update_arquivo_nome.sql
backend/src/middleware/: auth.rs  jwt.rs
backend/src/pools/: postgres.rs
backend/src/routes/: archives.rs  auth.rs  mod.rs
backend/src/routes/auth/: auth.rs  auth_user.rs  login.rs  logout.rs  me.rs  mod.rs  register.rs  validate-token.rs
backend/src/routes/cloud/: archives.rs  delete.rs  mod.rs  rename.rs  upload.rs
backend/src/routes/download_file/: download.rs
backend/src/routes/login/: login.rs
backend/src/routes/register/: register.rs
backend/src/routes/share/: upload.rs
backend/src/routes/shared/: handlers.rs  mod.rs  models.rs  share.rs  share_stored.rs
backend/src/routes/users/: get_dilithium_pk.rs  get_kyber_pk.rs  get_pk_kyber.rs  mod.rs
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
hooks/: UseAuth.ts
styles/: theme.ts
(+235 files in other folders)
